<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MDM Device Manager</string>
    <string name="welcome_title">Mobile Device Management</string>
    <string name="welcome_description">Transparent, consent-based device management for enrolled devices</string>
    <string name="enroll_button">Enroll Device</string>
    <string name="dashboard_button">Dashboard</string>
    <string name="permissions_title">Required Permissions</string>
    <string name="permissions_description">This app requires the following permissions to function properly</string>
    <string name="location_permission">Location Tracking</string>
    <string name="location_description">Track device GPS location in real-time</string>
    <string name="file_permission">File Management</string>
    <string name="file_description">Upload, download, and delete files remotely</string>
    <string name="app_management_permission">App Management</string>
    <string name="app_management_description">Install, uninstall, and manage apps</string>
    <string name="screen_capture_permission">Screen Viewing</string>
    <string name="screen_capture_description">View device screen remotely</string>
    <string name="device_admin_permission">Device Administration</string>
    <string name="device_admin_description">Allow remote lock and factory reset</string>
    <string name="accept_permissions">Accept All Permissions</string>
    <string name="deny_permissions">Deny</string>
    <string name="enrollment_title">Device Enrollment</string>
    <string name="enrollment_code_hint">Enter enrollment code</string>
    <string name="server_url_hint">Server URL (https://...)</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="dashboard_title">Device Dashboard</string>
    <string name="location_service">GPS Tracking Service</string>
    <string name="location_active">Location tracking active</string>
    <string name="file_manager_title">File Manager</string>
    <string name="upload_file">Upload File</string>
    <string name="download_file">Download File</string>
    <string name="delete_file">Delete File</string>
    <string name="app_manager_title">App Manager</string>
    <string name="install_app">Install App</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="block_app">Block App</string>
    <string name="allow_app">Allow App</string>
    <string name="network_monitor">Network Monitor</string>
    <string name="device_security">Device Security</string>
    <string name="lock_device">Lock Device</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="screen_capture_permission_title">Screen Capture Permission</string>
    <string name="screen_capture_permission_message">This app needs permission to capture your screen for remote viewing. You will be prompted to allow this each time.</string>
    <string name="file_operation_confirmation">Confirm File Operation</string>
    <string name="confirm_file_upload">Do you want to upload this file?</string>
    <string name="confirm_file_download">Do you want to download this file?</string>
    <string name="confirm_file_delete">Do you want to delete this file?</string>
    <string name="confirm_app_install">Do you want to install this app?</string>
    <string name="confirm_app_uninstall">Do you want to uninstall this app?</string>
    <string name="confirm_lock">Lock this device?</string>
    <string name="confirm_factory_reset">Factory reset will erase all data. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
</resources>
